--- a/angular.json
+++ b/angular.json
@@ -48,6 +48,12 @@
                   "maximumError": "4kb"
                 }
               ],
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
               "outputHashing": "all"
             },
             "development": {
@@ -68,7 +74,8 @@
               "browserTarget": "PraderaFront:build:production"
             },
             "development": {
-              "browserTarget": "PraderaFront:build:development"
+              "browserTarget": "PraderaFront:build:development",
+              "proxyConfig": "proxy.conf.json"
             }
           },
           "defaultConfiguration": "development"
